added basic dspy code

--- a/src/learning/evals/honeycomb.ipynb
+++ b/src/learning/evals/honeycomb.ipynb
@@ -94,6 +94,7 @@
     "    prompt_template = resource('data/prompt.txt')\n",
     "    \n",
     "    async def solve(state: TaskState, generate: Generate):\n",
+    "        state.\n",
     "        state.user_prompt.text = prompt_template.replace(\"{{prompt}}\", state.user_prompt.text).replace(\"{{columns}}\", state.metadata[\"columns\"])\n",
     "        return state\n",
     "    return solve"
